<resources>
    <string name="app_name">SkyLink</string>

    <!-- Main Activity -->
    <string name="main_welcome">¡Bienvenido!</string>
    <string name="main_welcome_desc">¿Cómo podemos ayudarlo el día de hoy?</string>
    <string name="main_desc_route">Optimizar ruta</string>
    <string name="main_desc_prices">Establecer precios</string>
    <string name="main_desc_last">Último recorrido</string>
    <string name="main_desc_config">Configuraciones</string>

    <!-- Selector de estaciones -->
    <string name="terminal_text_begin">¿En qué estación se encuentra ahora?</string>
    <string name="terminal_text_end">¿A qué estación se dirige?</string>
    <string name="terminal_text_select">Seleccione una estación</string>
    <string name="terminal_name_default">Sin estación seleccionada</string>
    <string name="terminal_button_text_select">Seleccionar</string>
    <string name="item_terminal_def">Nombre de la estación</string>
    <string name="terminal_button_text_next">Optimizar Ruta</string>

    <!-- Resultado -->
    <string name="result_desc">Los resultados son los siguientes:</string>
    <string name="result_time_desc">El tiempo necesario para completar su trayecto es de:</string>
    <string name="result_time">minutos</string>
    <string name="result_price_desc">El precio a pagar por su trayecto es de:</string>
    <string name="result_price">Bs</string>
    <string name="result_route">Su trayecto está conformado por las siguientes estaciones:</string>
    <string name="result_button_reset">Volver al inicio</string>

    <!-- Cambiar Precios -->
    <string name="select_price_desc">Seleccione la categoria a la que corresponde:</string>
    <string name="item_price_board">Precio abordaje:</string>
    <string name="item_price_transboard">Precio transbordo:</string>

    <!-- Configuraciones -->
    <string name="config_default">Opciones</string>
    <string name="config_price">Establecer precios</string>
    <string name="config_theme">Cambiar tema</string>
    <string name="config_dev">Opciones de desarrollo</string>

    <!-- Selector de temas -->
    <string name="desc_themes">Seleccione un tema:</string>
    <string name="desc_save_theme">Seleccionado: </string>
    <string name="save_themes">Aplicar cambio</string>
    <string name="theme_default">Default (Claro)</string>
    <string name="theme_dark_tur">Turquesa (Oscuro)</string>
    <string name="theme_dark_purple">Morado (Oscuro)</string>
    <string name="theme_dark">Oscuro</string>
    <string name="theme_light">Claro</string>
    <string name="theme_text_default">Tema Default</string>

    <!-- Dialog Info estaciones -->
    <string name="dialog_terminal_pre_title">Estación</string>
    <string name="dialog_terminal_color_subtitle">Líneas a las que pertenece:</string>
    <string name="dialog_terminal_pre_desc">Línea</string>

    <!-- Dialog Confirm -->
    <string name="dialog_confirm_text_default">Operación completada con éxito</string>
    <string name="dialog_confirm_button_default">Aceptar</string>
    <string name="dialog_confirm_text_price">Precio actualizado correctamente:</string>

    <!-- Opciones de desarrollo -->
    <string name="dev_title">Opciones de desarollo</string>
    <string name="dev_cmd_desc">Ingrese un comando</string>
    <string name="dev_wrongcmd">Ingrese un comando válido para continuar</string>
    <string name="dev_set">Set de líneas detallado en el LogCat</string>
    <string name="dev_graph">Grafo de estaciones detallado en el LogCat</string>

</resources>