<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <!-- Texto Descripción -->
    <TextView
        android:id="@+id/result_title"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/result_desc"
        app:layout_constraintBottom_toTopOf="@id/result_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Contenido principal -->
    <ScrollView
        android:id="@+id/result_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Tiempo -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:background="?attr/colorSurface"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">
                <!-- Titulo -->
                <TextView
                    style="@style/SubtitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/result_time_desc"
                    android:textColor="?attr/colorPrimary" />
                <!-- Resultado -->
                <TextView
                    style="@style/SubtitleText"
                    android:id="@+id/result_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:background="@android:color/transparent"
                    android:text="@string/result_time" />
            </LinearLayout>

            <!-- Precio -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:background="?attr/colorSurface"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">
                <!-- Titulo -->
                <TextView
                    style="@style/SubtitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/result_price_desc"
                    android:textColor="?attr/colorPrimary" />
                <!-- Resultado -->
                <TextView
                    style="@style/SubtitleText"
                    android:id="@+id/result_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:background="@android:color/transparent"
                    android:text="@string/result_price" />
            </LinearLayout>

            <!-- Ruta -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:background="?attr/colorSurface"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">
                <!-- Titulo -->
                <TextView
                    style="@style/SubtitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/result_route"
                    android:textColor="?attr/colorPrimary" />
                <!-- Ruta -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/result_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:padding="10dp"/>
            </LinearLayout>

            <!-- Reinicio -->
            <Button
                style="@style/SubtitleText"
                android:textSize="16sp"
                android:id="@+id/result_button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/result_button_reset"
                android:layout_margin="15dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>