<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_terminal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.activities.SelectTerminalActivity">

    <!-- Menú superior -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/terminal_upper_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Botón Atrás -->
        <ImageButton
            android:id="@+id/terminal_button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/editTextColor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/terminal_upper_menu"
        app:layout_constraintBottom_toTopOf="@id/select_terminal_button_next">
        <!-- FlexBox -->
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/terminal_upper_menu"
            app:flexWrap="wrap"
            app:justifyContent="center"
            android:background="@android:color/transparent">
            <!-- Selector Origen -->
            <androidx.cardview.widget.CardView
                android:layout_width="320dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="28dp"
                android:layout_margin="15dp"
                android:background="@android:color/transparent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorSurface"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="30dp">
                    <!-- Texto Descripción -->
                    <TextView
                        android:id="@+id/select_terminal_origin_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Title"
                        android:background="@android:color/transparent"
                        android:text="@string/terminal_text_begin"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <!-- Imágen  -->
                    <ImageView
                        android:id="@+id/select_terminal_origin_image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@drawable/hugeicons__cable_car"
                        android:layout_margin="5dp"
                        app:layout_constraintWidth_percent="0.5"
                        app:layout_constraintHeight_percent="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/select_terminal_origin_title"
                        android:background="@android:color/transparent"/>
                    <!-- Nombre -->
                    <TextView
                        android:id="@+id/select_terminal_origin_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Subtitle"
                        android:background="@android:color/transparent"
                        android:text="@string/terminal_name_default"
                        android:gravity="center"
                        app:layout_constraintTop_toBottomOf="@id/select_terminal_origin_image"/>
                    <!-- Botón Seleccionar -->
                    <Button
                        android:id="@+id/select_terminal_origin_select_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/select_terminal_origin_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/terminal_button_text_select"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- Selector Destino -->
            <androidx.cardview.widget.CardView
                android:layout_width="320dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="28dp"
                android:layout_margin="15dp"
                android:background="@android:color/transparent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorSurface"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="30dp">
                    <!-- Texto Descripción -->
                    <TextView
                        android:id="@+id/select_terminal_end_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Title"
                        android:background="@android:color/transparent"
                        android:text="@string/terminal_text_end"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <!-- Imágen  -->
                    <ImageView
                        android:id="@+id/select_terminal_end_image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@drawable/hugeicons__cable_car"
                        android:layout_margin="5dp"
                        app:layout_constraintWidth_percent="0.5"
                        app:layout_constraintHeight_percent="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/select_terminal_end_title"
                        android:background="@android:color/transparent"/>
                    <!-- Nombre -->
                    <TextView
                        android:id="@+id/select_terminal_end_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Subtitle"
                        android:background="@android:color/transparent"
                        android:text="@string/terminal_name_default"
                        android:gravity="center"
                        app:layout_constraintTop_toBottomOf="@id/select_terminal_end_image"/>
                    <!-- Botón Seleccionar -->
                    <Button
                        android:id="@+id/select_terminal_end_select_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/select_terminal_end_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/terminal_button_text_select"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </com.google.android.flexbox.FlexboxLayout>
    </ScrollView>

    <!-- Botón Siguiente -->
    <Button
        android:id="@+id/select_terminal_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminal_button_text_next"
        android:paddingHorizontal="30dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>