<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    tools:context=".viewmodel.activities.ConfiguracionesActivity">

    <!-- Menú superior -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/config_upper_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/config_button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/editTextColor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Contenido Principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/config_upper_menu">
        <!-- Precio seleccionado -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorSurface"
            android:padding="10dp">
            <TextView
                style="@style/SubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/config_price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageButton
                android:id="@+id/config_button_price"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorAccent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Selector de Temas -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorSurface"
            android:padding="10dp">
            <TextView
                style="@style/SubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/config_theme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageButton
                android:id="@+id/config_button_theme"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorAccent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Dev -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/config_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorSurface"
            android:visibility="gone"
            android:padding="10dp">
            <TextView
                style="@style/SubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/config_dev"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageButton
                android:id="@+id/config_button_dev"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorAccent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>